# head_box

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  tmp.txt
src/: Cargo.toml  generic_constants.rs  lib.rs
src/assets/: asset_systems.rs  mod.rs
src/components/: arena_components.rs  asset_components.rs  bullet_components.rs  camera_components.rs  enemy_components.rs  level_components.rs  mod.rs  physics_components.rs  player_components.rs  shooting_components.rs  sound_components.rs  weapon_components.rs
src/display_handler/: display_handler.rs  mod.rs
src/events/: atttack_events.rs  bullet_events.rs  enemy_spawn_events.rs  mod.rs  shooting_events.rs
src/head_box_plugin/: head_box_plugin.rs  mod.rs
src/in_game/: game_plugin.rs  mod.rs
src/in_game/data_classes/: enemy_components.rs  generic_components.rs  mod.rs  player_components.rs  wall_components.rs
src/in_game/systems/: arena_systems.rs  bullet_systems.rs  camera_systems.rs  collision_systems.rs  enemy_systems.rs  level_systems.rs  player_systems.rs
src/menus/: main_menu_plugin.rs  mod.rs
src/plugins/: game_plugin.rs  head_box_plugin.rs  load_screen_plugin.rs  main_menu_plugin.rs  mod.rs
src/src/: game.rs  generic_constants.rs  lib.rs  main.rs  main_menu.rs
src/src/arenas/: boxy.rs  mod.rs
src/src/assets/: asset_components.rs  asset_systems.rs  mod.rs
src/src/display_handler/: display_handler.rs  mod.rs
src/src/enemies/: mod.rs  zombie_bundle.rs
src/src/events/: bullet_events.rs  enemy_spawn_events.rs  mod.rs
src/src/head_box_plugin/: head_box_plugin.rs  mod.rs
src/src/in_game/: bullet.rs  game.rs  game_components.rs  game_constants.rs  game_old.rs  (+7 more)
src/states/: mod.rs  screen_state.rs
src/systems/: arena_systems.rs  asset_systems.rs  bullet_systems.rs  camera_systems.rs  collision_systems.rs  enemy_systems.rs  level_systems.rs  mod.rs  physics_systems.rs  player_systems.rs  shooting_systems.rs  sound_systems.rs  sprite_systems.rs  weapon_systems.rs
src/utils/: asset_constants.rs  generic_constants.rs  layer_constants.rs  mod.rs  physics_constants.rs
(+96 files in other folders)
